--- a/layouts/partials/dates.html
+++ b/layouts/partials/dates.html
@@ -1,3 +1,4 @@
+{{- if ne (.Param "omitDates") true }}
 <div class="content-dates meta">
 {{ i18n "last_mod" }} {{ .Lastmod.Format ($.Param "dateformat" | default "2 January, 2006") }}<br>
 {{- if not .Date.IsZero }}
@@ -7,3 +8,4 @@
 {{ i18n "published" }} {{ .PublishDate.Format ($.Param "dateformat" | default "2 January, 2006") }}
 {{ end -}}
 </div>
+{{- end -}}
