--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -49,6 +49,8 @@
 {{- end -}}
 
 {{- if or (.HasShortcode "search") (or .Page.Params.enableSearch false) (eq .TranslationKey "404") -}}
+{{ $flexsearch := resources.Get "libs/flexsearch.compact.js" | fingerprint -}}
+<script defer src="{{ $flexsearch.RelPermalink }}"></script>
 {{ $search_opts := merge $opts (dict "params" (dict "searchLimit" (site.Params.searchLimit | default 20))) -}}
 {{ $search := resources.Get "js/search.js" | js.Build $search_opts | fingerprint -}}
 <script defer src="{{ $search.RelPermalink }}"></script>
