--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -84,7 +84,7 @@
 {{ with $.Param "footer" }}<p>{{ . | markdownify }}</p>{{ end }}
 {{ if $.Param "poweredby" }}<p>Powered by <a href="https://gohugo.io/">Hugo</a> and the <a href="https://github.com/wildtechgarden/zen-theme-hugo-wtg">DFD-Zen theme</a>.</p>{{ end }}
 </footer>
-
+{{ end -}}
 {{ if $.Param "cookieconsent" }}{{ partialCached "cookieconsent.html" . }}{{ end -}}
 </div>
 </body>
