--- a/layouts/partials/mobilemenu.html
+++ b/layouts/partials/mobilemenu.html
@@ -1,6 +1,6 @@
 <div class="mobile-nav" dir="ltr">
   <div class="mobile-nav__cover"></div>
-  <button class="mobile-nav__toggle{{ if $.Param "mobilemenuoutline" }} button--outline{{ end }}" aria-expanded="false" aria-controls="sheet">
+  <button type="button" class="mobile-nav__toggle{{ if $.Param "mobilemenuoutline" }} button--outline{{ end }}" aria-expanded="false" aria-controls="sheet">
     {{ i18n "menu_mobile" }}
     <svg class="mobile-nav__hamburger" viewBox="0 0 100 100" focusable="false" aria-hidden="true">
       <rect width="80" height="12" x="10" y="20" rx="5"></rect>
